using Bomber.UI.Shared.Views;
using GameFramework.Visuals;

namespace Bomber.UI.Shared.Entities
{
    public interface IBombView : IEnemyView
    { }
}
