namespace Bomber.UI.Shared.Entities
{
    public interface IPlayerView : IEnemyView
    { }
}
